Implement new dashboard based on amalgam.

--- a/plugins/org.obeonetwork.dsl.uml2.design/plugin.xml
+++ b/plugins/org.obeonetwork.dsl.uml2.design/plugin.xml
@@ -554,4 +554,336 @@ Contributors:
             class="org.obeonetwork.dsl.uml2.design.preferences.UmlDesignerPreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.amalgam.explorer.activity.ui.pagesProvider">
+      <Page
+            class="org.eclipse.amalgam.explorer.activity.ui.api.editor.pages.BasicSessionActivityExplorerPage"
+            id="org.obeonetwork.dsl.uml2.design.CreationPage"
+            imageOff="icons/dashboard/CreateOff.gif"
+            imageOn="icons/dashboard/CreateOn.gif"
+            index="1"
+            tabName="Create"
+            title="Creation Page"
+            viewer="true">
+         <Description>
+            The Create section lists all the representations that could be created ordered by viewpoints : Capture (Package hierarchy, Use case diagram…), Design (Class diagram, Activity diagram,…).
+         </Description>
+         <Overview
+               imageOff="icons/dashboard/CreateOff.gif"
+               imageOn="icons/dashboard/CreateOn.gif">
+            <Description>
+               Create new diagram
+            </Description>
+         </Overview>
+         <Section
+               expanded="false"
+               filtering="true"
+               id="org.obeonetwork.dsl.uml2.design.CaptureSection"
+               index="1"
+               name="Capture">
+            <Description>
+               To capture the actors and their interactions with the application and define the main structure of the application.
+            </Description>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreatePackageHierarchyDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreatePackageHierarchyDiagram"
+                  image="icons/dashboard/capture/Package.gif"
+                  index="1"
+                  name="create new Package Hierarchy Diagram">
+               <Description>
+                  The package diagram is used to describe the structure of the system by showing the packages and their dependencies.
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateUseCaseDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateUseCaseDiagram"
+                  image="icons/dashboard/capture/UseCase.gif"
+                  index="2"
+                  name="create new UseCase Diagram">
+               <Description>
+                  The use case diagram is used to describe the interaction of the user and other applications with the specified system.
+               </Description>
+            </Activity>
+         </Section>
+         <Section
+               expanded="false"
+               filtering="true"
+               id="org.obeonetwork.dsl.uml2.design.DesignSection"
+               index="2"
+               name="Design">
+            <Description>
+               To work on the fine grained structure and the behaviours of the application.
+            </Description>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateActivityDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateActivityDiagram"
+                  image="icons/dashboard/design/Activity.gif"
+                  index="1"
+                  name="Create new Activity diagram">
+               <Description>
+                  The activity diagram is part of the behavioral diagrams in UML Standard, it is used to represent workflows of stepwise activities.
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateClassDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateClassDiagram"
+                  image="icons/dashboard/design/Class.gif"
+                  index="2"
+                  name="Create new Class diagram">
+               <Description>
+                  The class diagram is used to describe the structure of the system by showing the classes, the interfaces, their attributes, their operations and their relationships.
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateComponentDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateComponentDiagram"
+                  image="icons/dashboard/design/Component.gif"
+                  index="3"
+                  name="Create new Component diagram">
+               <Description>
+                  The component diagram is used to describe the structure of the system by showing the components and their connectors.
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateCompositeStructureDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateCompositeStructureDiagram"
+                  image="icons/dashboard/design/InterfaceRealization.gif"
+                  index="4"
+                  name="Create new Comosite Structure diagram">
+               <Description>
+                  The composite structure diagram is used to describe the structure of the system by showing the internal structure of classes and the interfaces they used to collaborate.
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateDeploymentDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateDeploymentDiagram"
+                  image="icons/dashboard/design/Deployment.gif"
+                  index="5"
+                  name="Create new Deployment diagram">
+               <Description>
+                  The deployment diagram is used to describe the structure of the system by showing the physical deployment of artifacts on nodes.
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateSequenceDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateSequenceDiagram"
+                  image="icons/dashboard/design/Lifeline.gif"
+                  index="6"
+                  name="Create new Sequence diagram">
+               <Description>
+                  The sequence diagram is used to show how processes operate with one another and in what order.
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateStateMachineDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateStateMachineDiagram"
+                  image="icons/dashboard/design/StateMachine.gif"
+                  index="7"
+                  name="Create new State Machine diagram">
+               <Description>
+                  The statemachine diagram is used to represent the different states and transitions of a system.
+               </Description>
+            </Activity>
+         </Section>
+         <Section
+               expanded="false"
+               filtering="true"
+               id="org.obeonetwork.dsl.uml2.design.ReviewSection"
+               index="3"
+               name="Review">
+            <Description>
+               To document, get some overview and metrics of the application (non standard representations).
+            </Description>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateDocumentationTable"
+                  id="org.obeonetwork.dsl.uml2.design.CreateDocumentationTable"
+                  image="icons/dashboard/review/Package.gif"
+                  index="1"
+                  name="create new Documentation table">
+               <Description>
+                  Create new documentation table
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateUseCaseCrossTable"
+                  id="org.obeonetwork.dsl.uml2.design.CreateUseCaseCrossTable"
+                  image="icons/dashboard/review/Class.gif"
+                  index="2"
+                  name="create new Use case cross table">
+               <Description>
+                  Create new Use Case cross table
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreatePackageContainmentDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreatePackageContainmentDiagram"
+                  image="icons/dashboard/review/Component.gif"
+                  index="3"
+                  name="create new Package containment diagram">
+               <Description>
+                  Create new Package containment diagram
+               </Description>
+            </Activity>
+         </Section>
+         <Section
+               expanded="false"
+               filtering="true"
+               id="org.obeonetwork.dsl.uml2.design.ExtendSection"
+               index="4"
+               name="Extend">
+            <Description>
+               To extend the UML standard for example by defining profile.
+            </Description>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.CreateProfileDiagram"
+                  id="org.obeonetwork.dsl.uml2.design.CreateProfileDiagram"
+                  image="icons/dashboard/extend/Profile.gif"
+                  index="1"
+                  name="Create new Profile diagram">
+               <Description>
+                  The profile diagram operates at the metamodel level to provide new stereotypes and profiles.
+               </Description>
+            </Activity>
+         </Section>
+      </Page>
+      <Page
+            class="org.obeonetwork.dsl.uml2.design.dashboard.DiagramActivityExplorerPage"
+            id="org.obeonetwork.dsl.uml2.design.NavigationPage"
+            imageOff="icons/dashboard/NavigateOff.gif"
+            imageOn="icons/dashboard/NavigateOn.gif"
+            index="2"
+            tabName="Navigate"
+            title="Navigation Page"
+            viewer="true">
+         <Description>
+            The Navigate section lists all the existing representations.
+         </Description>
+         <Overview
+               imageOff="icons/dashboard/NavigateOff.gif"
+               imageOn="icons/dashboard/NavigateOn.gif">
+            <Description>
+               Navigate to existing diagram
+            </Description>
+         </Overview>
+      </Page>
+      <Page
+            class="org.eclipse.amalgam.explorer.activity.ui.api.editor.pages.ActivityExplorerPage"
+            id="org.obeonetwork.dsl.uml2.design.DocumentationPage"
+            imageOff="icons/dashboard/HelpOff.gif"
+            imageOn="icons/dashboard/HelpOn.gif"
+            index="3"
+            tabName="Documentation"
+            title="Documentation Page"
+            viewer="false">
+         <Description>
+            The Help section lists some documentation entry points.
+         </Description>
+         <Overview
+               imageOff="icons/dashboard/HelpOff.gif"
+               imageOn="icons/dashboard/HelpOn.gif">
+            <Description>
+               UML-Designer documentation
+            </Description>
+         </Overview>
+         <Section
+               expanded="true"
+               filtering="false"
+               id="org.obeonetwork.dsl.uml2.design.HelpSection"
+               index="1"
+               name="Help">
+            <Description>
+               Description body text
+            </Description>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.OpenGettingStartedHelpActivity"
+                  id="org.obeonetwork.dsl.uml2.design.GettingStartActivity"
+                  image="icons/dashboard/topic_small.gif"
+                  index="1"
+                  name="Getting started">
+               <Description>
+                  Description body text
+               </Description>
+            </Activity>
+         </Section>
+         <Section
+               expanded="true"
+               filtering="false"
+               id="org.obeonetwork.dsl.uml2.design.ReferenceDocumentationSection"
+               index="2"
+               name="Reference Documentation">
+            <Description>
+               Description body text
+            </Description>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.OpenReferenceDocumentationHelpActivity"
+                  id="org.obeonetwork.dsl.uml2.design.OpenReferenceDocumentationActivity"
+                  image="icons/dashboard/topic_small.gif"
+                  index="1"
+                  name="Reference documentation">
+               <Description>
+                  Description body text
+               </Description>
+            </Activity>
+         </Section>
+         <Section
+               expanded="true"
+               filtering="false"
+               id="org.obeonetwork.dsl.uml2.design.GuidesSection"
+               index="3"
+               name="Guides">
+            <Description>
+               Description body text
+            </Description>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.OpenUserGuideHelpActivity"
+                  id="org.obeonetwork.dsl.uml2.design.OpenUserGuideActivity"
+                  image="icons/dashboard/toc_open.gif"
+                  index="1"
+                  name="User guide">
+               <Description>
+                  Description body text
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.OpenDeveloperGuideHelpActivity"
+                  id="org.obeonetwork.dsl.uml2.design.OpenDeveloperGuideActivity"
+                  image="icons/dashboard/toc_open.gif"
+                  index="2"
+                  name="Developer guide">
+               <Description>
+                  Description body text
+               </Description>
+            </Activity>
+         </Section>
+         <Section
+               expanded="true"
+               filtering="false"
+               id="org.obeonetwork.dsl.uml2.design.SupportSection"
+               index="4"
+               name="Support">
+            <Description>
+               Description body text
+            </Description>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.OpenSupportHelpActivity"
+                  id="org.obeonetwork.dsl.uml2.design.OpenSupportActivity"
+                  image="icons/dashboard/topic_small.gif"
+                  index="1"
+                  name="Support">
+               <Description>
+                  Description body text
+               </Description>
+            </Activity>
+            <Activity
+                  class="org.obeonetwork.dsl.uml2.design.dashboard.OpenSupportHelpActivity"
+                  id="org.obeonetwork.dsl.uml2.design.OpenSupportActivity"
+                  index="1"
+                  name="Support">
+               <Description>
+                  Description body text
+               </Description>
+            </Activity>
+         </Section>
+      </Page>
+   </extension>
 </plugin>
